--- a/content/themes/capassite/page-association.hbs
+++ b/content/themes/capassite/page-association.hbs
@@ -6,7 +6,7 @@
         <div class="container-sm">
             <div class="hero-inner">
                 <h1 class="hero-title h2-mobile mt-0 is-revealing">Association CaPASSCité</h1>
-                <p class="hero-paragraph is-revealing">L’association CaPASSCIté place au centre de son action l’être humain, son entourage, son désir de changement. L’ensemble de notre démarche s’inscrit dans un intérêt pour l’individu regardé comme le sujet de son histoire et de son propre devenir.
+                <p class="hero-paragraph is-revealing">L’association CaPASSCité place au centre de son action l’être humain, son entourage, son désir de changement. L’ensemble de notre démarche s’inscrit dans un intérêt pour l’individu regardé comme le sujet de son histoire et de son propre devenir.
 </p>
                 {{!-- <p class="hero-cta is-revealing"><a class="button button-secondary button-shadow" href="#">Get started
                         now</a></p> --}}
