--- a/content/themes/capassite/index.hbs
+++ b/content/themes/capassite/index.hbs
@@ -6,8 +6,8 @@
                 <div class="container-sm">
                     <div class="hero-inner">
                         <h1 class="hero-title h2-mobile mt-0 is-revealing">Association CaPASSCité</h1>
-                        <p class="hero-paragraph is-revealing">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation.</p>
-                        <p class="hero-cta is-revealing"><a class="button button-secondary button-shadow" href="#">Get started now</a></p>
+                        <p class="hero-paragraph is-revealing">Vous êtes en difficulté avec votre consommation ? Vous souhaitez en parler ? Être accompagné dans votre démarche ?</p>
+                        <p class="hero-cta is-revealing"><a class="button button-secondary button-shadow" href="/premier-accueil">Je veux changer</a></p>
                         <div class="hero-media">
                         </div>
                     </div>
@@ -29,7 +29,7 @@
                             </div>
                             <div class="feature-extended-body">
                                 <h3 class="mt-0">L'association</h3>
-                                <p>L’association CAPassCité place au centre de son action, l’être humain, son entourage, son désir de modifier son projet de vie pour recouvrir des droits citoyens visant son épanouissement.</p>
+                                <p>L’association CaPASSCité place au centre de son action, l’être humain, son entourage, son désir de modifier son projet de vie pour recouvrir des droits citoyens visant son épanouissement.</p>
                                 <a class="button button-primary button-shadow" href="/association">En savoir plus</a>
                             </div>
                         </div>
